<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_main_delete"
        android:title="@string/action_main_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_main_edit"
        android:title="@string/action_main_edit"
        android:icon="@drawable/ic_create_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />

    <item android:id="@+id/action_main_priority"
        android:title="@string/action_main_priority"
        android:icon="@drawable/ic_invert_colors_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />
</menu>